--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -1,7 +1,15 @@
-<div class="container" data-ng-controller="HeaderController">
+<div class="container-fluid">
+<div class="jumbotron text-center">
+	<h1>Extrovert.io</h1>
+</div>
+</div>
+
+<div class="container-fluid nav-main" data-ng-controller="HeaderController">
+	<div class="container">
+		
 	<div class="navbar-header">
 		<button class="navbar-toggle" type="button" data-ng-click="toggleCollapsibleMenu()">
-			<span class="sr-only">Toggle navigation</span>
+			<span class"sr-only">Toggle navigation</span>
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
@@ -55,4 +63,5 @@
 			</li>
 		</ul>
 	</nav>
+	</div>
 </div>
