--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -5,11 +5,11 @@
 			<h2>Welcome to Extrovert!</h2>
 			<p>Sup. I'm Sam aka. Kuiche - a developer, hacker and apparently now a <a href="/blog">blogger</a>.</p>
 			<p>
-				This site is a portfolio of things I have done, things I am doing. Things I am proud of. There's a load of stuff going on in this site. Head over to <a href="/#!/experements">experements</a> for a list of interesting fun projects, my <a href="/blog">blog</a> for news and info on recent projects. Visit my <a href="/#!/portfolio">portfolio</a> for a list of more professional things I have worked on and '<a href="/#!/about">about</a>' does exactly what you'd expect.
+				This site is a portfolio of things I have done, things I am doing. Things I am proud of. There's a load of stuff going on in this site. Head over to <a href="/#!/experiments">experiments</a> for a list of interesting fun projects, my <a href="/blog">blog</a> for news and info on recent projects. Visit my <a href="/#!/portfolio">portfolio</a> for a list of more professional things I have worked on and '<a href="/#!/about">about</a>' does exactly what you'd expect.
 			</p>
 
 			<p>
-				You may have noticed that this site has a <a href="/#!/signin">signin</a> link. This is used in a bunch of the <a href="/#!/experements">experements</a> on the site. Don't worry about it if you're just looking around.
+				You may have noticed that this site has a <a href="/#!/signin">signin</a> link. This is used in a bunch of the <a href="/#!/experiments">experiments</a> on the site. Don't worry about it if you're just looking around.
 			</p>
 			
 			<h2>So... this site's buggy as shit.</h2>
