--- a/public/modules/experements/views/list.client.view.html
+++ b/public/modules/experements/views/list.client.view.html
@@ -1,7 +1,7 @@
 <section data-ng-controller="ExperementController">
-	<h2>My experements!</h2>
+	<h2>My experiments!</h2>
 	<p>
-		This section is here to showcase a number of experements I am in the process of developing.
+		This section is here to showcase a number of experiments I am in the process of developing.
 	</p>
 	<p>Check back in a week or so when I have some of this craziness sorted</p>
 </section>
