--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -2,10 +2,10 @@
 	<div class="row">
 		<div class="col-md-8 col-sm-12 container">
 			
-			<h2>Welcome to Extrovert!</h2>
+			<h1>Welcome to Extrovert!</h1>
 			<p>Sup. I'm Sam aka. Kuiche - a developer, hacker and apparently now a <a href="/blog">blogger</a>.</p>
 			<p>
-				This site is a portfolio of things I have done, things I am doing. Things I am proud of. There's a load of stuff going on in this site. Head over to <a href="/#!/experiments">experiments</a> for a list of interesting fun projects, my <a href="/blog">blog</a> for news and info on recent projects. Visit my <a href="/#!/portfolio">portfolio</a> for a list of more professional things I have worked on and '<a href="/#!/about">about</a>' does exactly what you'd expect.
+				This site is a portfolio of things I have done, things I am doing. Things I am proud of. There's a load of stuff going on in this site. Head over to <a href="/#!/experiments">experiments</a> for a list of interesting fun projects, my <a href="/blog">blog</a> for news and info on recent projects. Visit my <a href="/#!/portfolio">portfolio</a> for a list of more professional things I have worked on and '<a href="/#!/about">about</a>' does exactly what you'd expect (actually, this is a lie right now).
 			</p>
 
 			<p>
