--- a/public/modules/portfolio/views/list.client.view.html
+++ b/public/modules/portfolio/views/list.client.view.html
@@ -1,7 +1,14 @@
 <section data-ng-controller="ExperementController">
-	<h2>My potfolio!</h2>
+	<h1>My potfolio!</h1>
 	<p>
-		This section is here to showcase a number of experiments I am in the process of developing.
+		This section is a showcase of projects I have been a part of. Sites to be included:
+		<ul>
+			<li><a href="//www.message.co.uk/mothership/">Mothership Ecommerce platform</a></li>
+			<li><a href="//tonicuk.com">Tonic</a></li>
+			<li><a href="//themountainfactor.com">The Mountain Factor</a></li>
+			<li><a href="//realstarsarerare.com">RealStarsAreRare</a></li>
+			<li><a href="//junkclub.com">Junk Club</a></li>
+		</ul>
 	</p>
-	<p>Check back in a week or so when I have some of this craziness sorted</p>
+	<p>Check back in a week or so when I have some of this craziness sorted.</p>
 </section>
