--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 <div class="jumbotron text-center">
-	<h1>Extrovert.io</h1>
+	<span>Extrovert.io</span>
 </div>
 </div>
 
