Adding to the portfolio

--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -1,21 +1,12 @@
 <section data-ng-controller="HomeController">
-	<div class="row">
-		<div class="col-md-8 col-sm-12 container">
-			
-			<h1>Welcome to Extrovert!</h1>
-			<p>Sup. I'm Sam aka. Kuiche - a developer, hacker and apparently now a <a href="/blog">blogger</a>.</p>
-			<p>
-				This site is a portfolio of things I have done, things I am doing. Things I am proud of. There's a load of stuff going on in this site. Head over to <a href="/#!/experiments">experiments</a> for a list of interesting fun projects, my <a href="/blog">blog</a> for news and info on recent projects. Visit my <a href="/#!/portfolio">portfolio</a> for a list of more professional things I have worked on and '<a href="/#!/about">about</a>' does exactly what you'd expect (actually, this is a lie right now).
-			</p>
-
-			<p>
-				You may have noticed that this site has a <a href="/#!/signin">signin</a> link. This is used in a bunch of the <a href="/#!/experiments">experiments</a> on the site. Don't worry about it if you're just looking around.
-			</p>
-			
-			<h2>So... this site's buggy as shit.</h2>
-			<p>
-				This site is my first <a href="//nodejs.org">node.js</a> application. It is in itself an experement. Pretty much everything on here is on Github, so if there's any bugs that are REALLY bugging you (god I hate puns), submit an <a href="https://github.com/kuiche/extrovert/issues">issue</a> :D.
-			</p>
-		</div>
-	</div>
+	<h1>Welcome to Extrovert!</h1>
+	<p>
+		Hello and welcome. I am Samuel Trangmar-Keates, better known online as Kuiche and this is my <strike>glorius</strike> currently bland homepage.
+	</p>
+	<p>
+		I'm a Software Dev currently working as a Web Developer in Brighton. In my spare time I have  ton of side projects which I will slowly be polishing and putting up here and <a href="//github.com/kuiche">GitHub</a> for y'all.
+	</p>
+	<p>
+		This entire website is a work in progress and alway will be so check back regularly!
+	</p>
 </section>
