--- a/app/views/layout.server.view.html
+++ b/app/views/layout.server.view.html
@@ -46,10 +46,11 @@
 
 <body class="ng-cloak">
 	<header data-ng-include="'/modules/core/views/header.client.view.html'" class="main-header container-fluid"></header>
-	<section class="content">
-		<section class="container">
+	<section class="container">
+		<section class="col-md-8">
 			{% block content %}{% endblock %}
 		</section>
+		<section class="col-md-4 " data-ng-include="'/modules/blog/views/feed.client.view.html'"></section>
 	</section>
 
 	<!--Embedding The User Object-->
