--- a/ghost/content/themes/extrovert/assets/css/screen.css
+++ b/ghost/content/themes/extrovert/assets/css/screen.css
@@ -489,6 +489,10 @@ margin on the iframe, cause it breaks stuff. */
     overflow: hidden;
 }
 
+.main-header a {
+    text-decoration: none;
+}
+
 .main-header .inner {
     width: 80%;
 }
@@ -645,14 +649,16 @@ margin on the iframe, cause it breaks stuff. */
 }
 
 /* The details of your blog. Defined in ghost/settings/ */
-.page-title {
+.main-header-content.page-title {
     margin: 10px 0 10px 0;
     font-size: 5rem;
     letter-spacing: -1px;
     font-weight: 700;
     font-family: "Open Sans", sans-serif;
     color: #fff;
+    text-decoration: none;
 }
+
 
 .page-description {
     margin: 0;
@@ -666,7 +672,7 @@ margin on the iframe, cause it breaks stuff. */
 
 .no-cover.main-header {
     min-height: 160px;
-    max-height: 40%;
+    max-height: 30%;
     background: #050600;
 }
 
