--- a/ghost/content/themes/extrovert/index.hbs
+++ b/ghost/content/themes/extrovert/index.hbs
@@ -9,11 +9,14 @@
     </nav>
     <div class="vertical">
         <div class="main-header-content inner">
-            <h1 class="page-title">{{@blog.title}}</h1>
-            <h2 class="page-description">{{@blog.description}}</h2>
+            <a href="/">
+                <h1 class="page-title">{{@blog.title}}</h1>
+                <h2 class="page-description">{{@blog.description}}</h2>
+            </a>
         </div>
     </div>
-    <a class="scroll-down icon-arrow-left" href="#content" data-offset="-45"><span class="hidden">Scroll Down</span></a>
+    <a class="scroll-down icon-arrow-left" href="#content" data-offset="-45"><span class="hidden">Scroll Down</span>
+    </a>
 </header>
 
 {{! The main content area on the homepage }}
