--- a/public/modules/portfolio/views/list.client.view.html
+++ b/public/modules/portfolio/views/list.client.view.html
@@ -16,7 +16,7 @@
 		I have also used Mothership to build the backend for a number of sites such as <a href="//iffleyroad.com">Iffley Road</a>, <a href="//shop-stoneham.com">Stoneham</a> and <a href="//tonicuk.com">Tonic</a>.
 	</p>
 	<h2 id="dissertation">
-		<a href="#">Dissertation: Distributed Virtual World</a>
+		<a href="/files/ScatteredWorldGUI.jar" target="_self">Dissertation: ScatteredWorld</a>
 	</h2>
 	<p>
 		For my 3rd year University dissertation I created a 2D distributed virtual world in Java. This project recursively split the world up into smaller and smaller squares based on load and assigned them to peers. A DHT (<a href="https://en.wikipedia.org/wiki/Chord_(peer-to-peer)">Chord</a>) was used for region lookup.
