--- a/public/modules/portfolio/views/list.client.view.html
+++ b/public/modules/portfolio/views/list.client.view.html
@@ -15,6 +15,7 @@
 	<p>
 		I have also used Mothership to build the backend for a number of sites such as <a href="//iffleyroad.com">Iffley Road</a>, <a href="//shop-stoneham.com">Stoneham</a> and <a href="//tonicuk.com">Tonic</a>.
 	</p>
+
 	<h2 id="dissertation">
 		<a href="/files/ScatteredWorldGUI.jar" target="_self">Dissertation: ScatteredWorld</a>
 	</h2>
@@ -23,6 +24,9 @@
 	</p>
 	<p>
 		The project was successful in demonstrating that the methods used were feasble for real word usage and that offloading regions would significantly reduce the load for each individual node.
+	</p>
+	<p>
+		I have included a download for the GUI jar, however it may not be clear what is going on when you open it. In fact I expect it to be majorly confusing unless you are me. I plan to get the source up onto GitHub with an explanation soon.
 	</p>
 
 	<h2>
